# implicit-function-tracing

./: .gitignore  CLAUDE.md  README.md  activity.md  nn_tracer_experiment.py  pyproject.toml
docs/: trace_config.md
src/: curve_utils.py  logger.py  nn_model.py  nn_visualization.py  numerical_utils.py  tracer.py
