[project]
name = "tracing-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.7",
    "ipympl>=0.9.7",
    "jax[cuda12]>=0.6.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "optax>=0.2.5",
    "scipy>=1.16.0",
]
